modified:   example.html 	modified:   jammer.css modified:   jammer.css.map 	new file:   jammer.strippeddown.css 	new file:   jammer.strippeddown.css.map 	modified:   sass/_components.scss

--- a/example.html
+++ b/example.html
@@ -569,6 +569,13 @@
 				</template>
 			</div>
 			<hr>
+			<h2>8px-grid utility</h2>
+			<div class="text-center">
+				<button onclick="body.classList.toggle('gridHelper')">
+					show grid
+				</button>
+			</div>
+			<hr>
 			<h2>Example chat area</h2>
 			<div class="p10">
 				<div class="p10" id="chatArea" style="height:30rem;background:rgba(0,0,0,0.05)">
@@ -588,6 +595,13 @@
 					</button>
 				</div>
 			</div>
+			<hr>
+			<h2>Spin loaders</h2>
+			<div class="p8">
+				<span class="spin1"></span>
+				<span class="spin2"></span>
+				<span class="spin3"></span>
+			</div>	
 			<hr>
 			<h2>Customize the colors</h2>
 			<div class="p8">
