modified:   example.html 	modified:   jammer.css 	modified:   jammer.css.map 	modified:   sass/_components.scss

--- a/example.html
+++ b/example.html
@@ -601,6 +601,9 @@
 				<span class="spin1"></span>
 				<span class="spin2"></span>
 				<span class="spin3"></span>
+				<span class="spin4"></span>
+				<span class="spin5"></span>
+				<span class="spin6"></span>
 			</div>	
 			<hr>
 			<h2>Customize the colors</h2>
