modified:   example.html 	modified:   jammer.css 	modified:   jammer.css.map 	modified:   jammer.min.css 	modified:   jammer.min.css.map 	modified:   sass/_components.scss

--- a/example.html
+++ b/example.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div style="width:415px;height:99%;max-height:725px;display:inline-block;overflow:auto">
-			<div class="app_header">
+			<div class="app-header">
 				<div></div>
 				<div>
 					<h1 class="text-center">
@@ -608,6 +608,7 @@
 				<span class="spin7"></span>
 				<span class="spin8"></span>
 				<span class="spin9"></span>
+				<span class="spin10"></span>
 			</div>
 			<!--<div>
 				<progress min="0" max="100" value="70"></progress>
