modified:   example.html 	modified:   jammer.css 	modified:   jammer.css.map 	modified:   jammer.min.css 	modified:   jammer.min.css.map 	new file:   sass/_animations.scss 	modified:   sass/_components.scss

--- a/example.html
+++ b/example.html
@@ -609,6 +609,8 @@
 				<span class="spin8"></span>
 				<span class="spin9"></span>
 				<span class="spin10"></span>
+				<span class="spin11"></span>
+				<span class="spin12"></span>
 			</div>
 			<!--<div>
 				<progress min="0" max="100" value="70"></progress>
