modified:   example.html 	modified:   jammer.css 	modified:   jammer.css.map 	modified:   sass/_base.scss 	modified:   sass/_colors.scss 	modified:   sass/_components.scss 	modified:   sass/_inputfields.scss

--- a/example.html
+++ b/example.html
@@ -7,7 +7,7 @@
 		<title>jammer.css example</title>
 	</head>
 	<body>
-		<div style="width:415px;height:99%;max-height:725px;display:inline-block;overflow:auto">
+		<div style="width:100%;max-width:415px;height:99%;max-height:725px;display:inline-block;overflow:auto">
 			<div class="app-header">
 				<div></div>
 				<div>
